.k8s/ingress.yaml
# ingress for vps domain
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: game-library-ui-ingress
    namespace: game-library
    annotations:
        cert-manager.io/cluster-issuer: lets-encrypt
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
    tls:
      - hosts:
          - _K8S_URL_
        secretName: tls-secret
    rules:
      - host: _K8S_URL_
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: game-library-ui-service
                        port:
                            number: 80

---
# ingress for game-library domain
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: game-library-ui-domain-ingress
    namespace: game-library
    annotations:
        cert-manager.io/cluster-issuer: lets-encrypt-dns
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
    tls:
      - hosts:
          - _UI_URL_
        secretName: ui-tls-secret
    rules:
      - host: _UI_URL_
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: game-library-ui-service
                        port:
                            number: 80
